view ready